--- a/mw-webapp/src/component/editableTextarea/editableTextarea.css
+++ b/mw-webapp/src/component/editableTextarea/editableTextarea.css
@@ -1,17 +1,22 @@
 .grow-wrap {
     display: grid;
-    max-width: 200px;
-    width: auto;
-  }
+    max-width: 300px;
+}
+
 .grow-wrap::after {
     content: attr(data-replicated-value) " ";
     white-space: pre-wrap;
     visibility: hidden;
 }
+
 .grow-wrap > textarea {
     resize: none;
     overflow: hidden;
+    width: '100%';
+    height: '100%';
+    white-space: 'pre-wrap';
 }
+
 .grow-wrap > textarea,
 .grow-wrap::after {
     border: 1px solid black;
