added tests to checkbox

--- a/mw-webapp/src/component/textarea/Textarea.module.scss
+++ b/mw-webapp/src/component/textarea/Textarea.module.scss
@@ -1,6 +1,6 @@
 .textarea {
+  overflow: "hidden";
+  width: "auto";
   resize: none;
-  overflow: 'hidden'; 
-  width: 'auto'; 
-  white-space: 'nowrap';
+  white-space: "nowrap";
 }
